TEZ-1710. Add support for cluster default AM/task launch opts. (sseth)